exports[`invalid(1): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(1): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(2): {\"name\": \"foo\", \"private\": false} 1`] = `

[Input]
  1 | {"name": "foo", "private": false}

`;

exports[`invalid(2): {\"name\": \"foo\", \"private\": false} 2`] = `

Message:
> 1 | {"name": "foo", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(3): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/index.js", "files": ["src"]}

`;

exports[`invalid(3): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/index.js", "files": ["src"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(4): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"types": "./types/index.d.ts", "files": ["dist"]}

`;

exports[`invalid(4): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"types": "./types/index.d.ts", "files": ["dist"]}
    |           ^^^^^^^^^^^^^^^^^^^^ Entry point \`./types/index.d.ts\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(5): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"exports": "./src/**/*.js", "files": ["dist"]}

`;

exports[`invalid(5): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"exports": "./src/**/*.js", "files": ["dist"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./src/**/*.js\` is not covered by the \`files\` allowlist.

`;
